# 20KBC

./: .gitignore  AGENTS.md  Cargo.toml  Design_full.txt  README.md  mkdocs.yml  prd.txt
.taskmaster/: state.json
docs/: 01-game-overview.md  02-core-mechanics.md  03-actions.md  04-environment.md  05-environment-season-climate-tables.md  06-gaia.md  07-resources.md  08-units.md  09-buildings.md  10-tech-tree.md  index.md
game-core/: Cargo.toml
overrides/: main.html
plans/: 00-mvp-overview.md  01-game-core-rust.md  02-spike-godot-gdext.md  03-spike-bevy.md  04-spike-fyrox.md
prds/: INDEX.md  PRD-01-wolf-gaia.md  PRD-02-resources.md  PRD-03-selection.md  PRD-04-asset-extraction.md  PRD-05-worker-spawn.md  PRD-06-day-night.md  PRD-07-replay-save.md  PRD-08-stress-mode.md  PRD-09-mdx-extract.md  PRD-10-oss-fallback-models.md  PRD-11-terrain-polish.md  PRD-12-box-select.md  PRD-13-formation-move.md  PRD-14-attack-move.md  PRD-15-combat-fx.md  PRD-16-portrait-hud.md  PRD-17-peasant-model.md  PRD-18-wolf-model.md  PRD-19-tree-stone-models.md  PRD-20-audio.md  PRD-21-mdx-textures.md  PRD-22-mdx-bones-skin.md  PRD-23-mdx-animations.md  PRD-24-godot-anim-hookup.md  PRD-25-buildings-extract.md  PRD-26-buildings-sim.md  PRD-27-building-node.md  PRD-28-tree-model-fix.md  PRD-29-wolf-capsule-fallback.md  PRD-30-runtime-mpq.md  PRD-31-runtime-blp.md  PRD-32-runtime-mdx.md  PRD-33-wc3-material-shader.md  PRD-34-runtime-skin-anim.md  PRD-35-team-color.md  (+2 more)
spikes/fyrox/: Cargo.toml  HANDOVER.md
spikes/fyrox/src/: camera.rs  day_night.rs  hud.rs  main.rs  terrain.rs  units.rs
(+165 files in other folders)
